# askfaro-core

./: Cargo.toml  README.md
.github/workflows/: release.yml
askfaro-core/: .gitignore  Cargo.toml  build.rs
askfaro-core/examples/: transcribe.rs
askfaro-core/src/: lib.rs  model.rs
askfaro-core/src/generation/: apple_fm.rs  mod.rs
askfaro-core/src/progressive/: mod.rs  pcx.rs
askfaro-core/src/search/: embed.rs  fusion.rs  gemma.rs  mod.rs  models.rs  sqlite.rs  types.rs
askfaro-core/src/stt/: mod.rs  models.rs
askfaro-core/swift/: Package.resolved  Package.swift
askfaro-core/swift/Sources/AppleFM/: AppleFM.swift
askfaro-core/tests/: conformance.rs  gemma_e2e.rs  gen_golden.py  golden.json
core-stt/: Cargo.toml
core-stt/examples/: transcribe.rs
core-stt/src/: lib.rs  models.rs
